--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <service
             android:name=".api.YahooFinanceService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="false" />
 
         <!-- Main Activity declaration -->
         <activity
